<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:singleLine="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/general"
            android:text="@string/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_500"
            app:checkedIconTint="@color/white"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/business"
            android:text="@string/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_500"
            app:checkedIconTint="@color/white"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/entertainment"
            android:text="@string/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_500"
            app:checkedIconTint="@color/white"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/health"
            android:text="@string/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_500"
            app:checkedIconTint="@color/white"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/science"
            android:text="@string/science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_500"
            app:checkedIconTint="@color/white"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
        android:id="@+id/sport"
        android:text="@string/sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:checkedIconTint="@color/white"
        app:chipBackgroundColor="@color/purple_500"
        style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/technology"
            android:text="@string/technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:checkedIconTint="@color/white"
            app:chipBackgroundColor="@color/purple_500"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>